--- a/client/src/App.css
+++ b/client/src/App.css
@@ -562,7 +562,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   color: #fff;
-  margin: 0 0 8px 0;
+  margin: 6px 0 8px 0;
   padding: 16px 24px;
   font-weight: 400;
   font-size: 14px;
