--- a/client/src/App.css
+++ b/client/src/App.css
@@ -240,6 +240,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-size: cover;
   background-repeat: no-repeat;
 }
+/* Mobile view override */
+@media (max-width: 768px) {
+  .banner {
+    padding-top: 179px;
+  }
+}
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -274,6 +280,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: flex;
   align-items: center;
 }
+/* Mobile view override */
+@media (max-width: 768px) {
+  .banner button {
+    margin-top: 33px;
+     margin-top: 16px; /* this overrides bottom padding */
+  }
+}
+
 .banner button svg {
   font-size: 25px;
   margin-left: 10px;
@@ -399,6 +413,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
+
+
 @media (max-width: 768px) {
   .skill-bx {
     padding: 40px 20px;
@@ -423,6 +439,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     font-size: 12px;
   }
 }
+
+
+@media (max-width: 330px) {
+  .technology-grid {
+    gap: 14px;
+  }
+}
+
 
 /************ Projects Css ************/
 .project {
