--- a/client/src/App.css
+++ b/client/src/App.css
@@ -497,7 +497,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     position: absolute;
     width: 0;
     height: 100%;
-    background: #25acc7;
+    background:  RGB(94, 219, 226);
     top: 0;
     left: 0;
     z-index: -1;
@@ -597,7 +597,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .contact form input:focus,
 .contact form textarea:focus {
   background: rgba(255, 255, 255, 0.1);
-  border-color: rgba(170, 54, 124, 0.5);
+  border-color: #343a40;
   outline: none;
 }
 
